deploys/k8s/got-ui/svc.yml
---
kind:       Service
apiVersion: v1
metadata:
  name: got-ui
  labels:
    app: got-ui
spec:
  type: NodePort
  selector:
    app: got-ui
  ports:
    - name:       http
      port:       80
      targetPort: http
      nodePort:   30410
