deploys/k8s/got-ui/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: got-ui
  labels:
    app: got-ui
spec:
  backend:
    serviceName: got-ui
    servicePort: 80
